# li3ds-ros_arduino

./: CMakeLists.txt  package.xml
firmware/: CMakeLists.txt  PILOTE-PLATEFORME-LI3DS.cpp  chatter.cpp  li3ds.cpp  li3ds_arduino.cpp  li3ds_arduino.cpp.bak  li3ds_camlight.h  li3ds_clock.h  li3ds_commands.h  li3ds_configs.h  li3ds_gps.h  li3ds_ros.h  li3ds_sketch.cpp  li3ds_states.h  test_NMEA.cpp
firmware/tmp/: li3ds_gps.h  li3ds_time.h  simple_li3ds.cpp
firmware/tmp2/: li3ds_commands.h  li3ds_configs.h  li3ds_pps.h  li3ds_ros.h  li3ds_ros_services.h  li3ds_sketch.cpp
msg/: commands.msg  states.msg
test/: CMakeLists.txt  README.md  ros_arduino.cpp  ros_arduino.test  ros_arduino_2.test  ros_arduino_sub.test  test_arduino.cpp  test_arduino.py  test_arduino_sub.cpp
